fixed the footer cutoff issue

--- a/css/style-desktop.css
+++ b/css/style-desktop.css
@@ -162,7 +162,7 @@
 			position: absolute;
 			bottom: 0;
 			right: 0;
-			padding: 2em;
+			padding: 1.5em;
 			text-align: right;
 		}
 
